src/test/deca/context/invalid/provided/testi13.deca
//Resultats :
//Erreur contextuelle
//Ligne 6 : In order to return, returntype should be different than void
class A{
    void saso(int x){
        return x;
    }
}
